// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bundle should bundle external refs 1`] = `
openapi: 3.0.0
paths:
  /pet:
    parameters:
      - $ref: '#/components/parameters/path-param'
    put:
      parameters:
        - $ref: '#/components/parameters/param-a'
        - $ref: '#/components/parameters/param-b'
    get:
      parameters:
        - $ref: '#/components/parameters/param-a'
        - $ref: '#/components/parameters/param-c'
components:
  parameters:
    param-a:
      name: param_a
    path-param:
      name: path_param
    param-b:
      name: param_b
    param-c:
      name: param_c

`;

exports[`bundle should bundle external refs and warn for conflicting names 1`] = `
openapi: 3.0.0
paths:
  /pet:
    parameters:
      - $ref: '#/components/parameters/path-param'
    put:
      parameters:
        - $ref: '#/components/parameters/param-b'
        - $ref: '#/components/parameters/param-b-2'
    get:
      parameters:
        - $ref: '#/components/parameters/param-a'
        - $ref: '#/components/parameters/param-c'
components:
  parameters:
    param-a:
      name: test
    param-b:
      name: param_b
    path-param:
      name: path_param
    param-b-2:
      name: param_b
    param-c:
      name: param_c

`;
